<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="instructionViewModel"
            type="com.udacity.shoestore.screens.instruction.InstructionViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".screens.instruction.InstructionFragment">

        <TextView
            android:id="@+id/tv_label_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fragment_instructions_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_text_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_instructions_text"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_instruction_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> instructionViewModel.onContinue()}"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/fragment_instructions_button_continue" />


    </LinearLayout>
</layout>